--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
 <body>
   <nav class="navbar">
     <a class="navbar-brand" href="">A really cool website</a>
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Authors
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Jack</a>
+                  <a class="dropdown-item" href="#">Tom</a>
+                  <a class="dropdown-item" href="#">Sunny</a>
+                  <a class="dropdown-item" href="#">Kelly</a>
+                </div>
+              </li>
+              
+            </ul>
+          </div>
+       
+      </li>
   </nav>
   <div>
     <p>This is the homepage of a website by Jack, Tom, Kelly, and Sunny.</p>
