update navbar link to kelly's article

--- a/kelly.html
+++ b/kelly.html
@@ -13,11 +13,34 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-        
+
 </head>
 
 <body>
-
+    <nav class="navbar">
+        <a class="navbar-brand" href="">A really cool website</a>
+        <li class="nav-item dropdown">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="dropdown-item" href="#">Jack</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="dropdown-item" href="#">Tom</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="dropdown-item" href="#">Sunny</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="dropdown-item" href="kelly.html">Kelly</a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+    </nav>
     <div id="header" class="ui main text container">
         <div class="font-effect-anaglyph ui huge header">applications of computing</div>
         <p class="desc ui medium header">and how it has contributed to society</p>
@@ -91,7 +114,8 @@
             <p>data analytics might not necessarily be the "best" contribution to society, but i am partial that it has contributed
                 a fair bit.</p>
             <p>analysis of data has brought us so much for the everyday people. health diagnosis. weather predictions. personalized
-                discounts.</p>
+                discounts.
+            </p>
             <p>businesses benefit from knowing credit defaulters, sentiment analysis of their demographics.</p>
             <p>what would the
                 <a class="special" href="http://marvelcinematicuniverse.wikia.com/wiki/Zola%27s_Algorithm">world</a> be like when prescriptive analytics becomes optimized for the layman?</p>
