--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>A really cool website</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -26,7 +27,7 @@
             <a class="dropdown-item" href="#">Sunny</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="dropdown-item" href="#">Kelly</a>
+            <a class="dropdown-item" href="kelly.html">Kelly</a>
           </li>
         </ul>
       </div>
