--- a/index.html
+++ b/index.html
@@ -9,29 +9,20 @@
 </head>
 
 <body>
-  <nav class="navbar">
-    <a class="navbar-brand" href="">A really cool website</a>
-    <li class="nav-item dropdown">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="dropdown-item" href="#">Jack</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="dropdown-item" href="#">Tom</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="dropdown-item" href="#">Sunny</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="dropdown-item" href="kelly.html">Kelly</a>
-          </li>
-        </ul>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#">A really cool website</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="#">Jack</a>
+        <a class="nav-item nav-link" href="#">Tom</a>
+        <a class="nav-item nav-link" href="#">Sunny</a>
+        <a class="nav-item nav-link" href="kelly.html">Kelly</a>
       </div>
-    </li>
+    </div>
   </nav>
   <div>
     <p>This is the homepage of a website by Jack, Tom, Kelly, and Sunny.</p>
