--- a/kelly.html
+++ b/kelly.html
@@ -25,7 +25,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Jack</a>
+                <a class="nav-item nav-link" href="jack.html">Jack</a>
                 <a class="nav-item nav-link" href="#">Tom</a>
                 <a class="nav-item nav-link" href="#">Sunny</a>
                 <a class="nav-item nav-link" href="kelly.html">Kelly</a>
