Fix header links and add Bootstrap to Tom's page.

--- a/myweb.html
+++ b/myweb.html
@@ -1,9 +1,25 @@
-<!DOCTYPE html> # declare the file is a .html file
-<html> # Every html file should have this
+<!DOCTYPE html> <!-- declare the file is a .html file -->
+<html> <!-- Every html file should have this -->
 <head>
-    <title>Animal World</title> # The titie will show on the tab(The top of the website)
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Animal World</title> <!-- The title will show on the tab(The top of the website)-->
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html">A really cool website</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="jack.html">Jack</a>
+                <a class="nav-item nav-link" href="myweb.html">Tom</a>
+                <a class="nav-item nav-link" href="#">Sunny</a>
+                <a class="nav-item nav-link" href="kelly.html">Kelly</a>
+            </div>
+        </div>
+    </nav>
     <h1>Rabbit</h1>
     <div id= "introduction">
         <h2>Different Kinds of rabbits</h2>
@@ -19,7 +35,9 @@
         <img src="http://cdn1.theweek.co.uk/sites/theweek/files/styles/16x9_710/public/2018/02/hare-cropped.jpg?itok=tU5XSzcu" />
 
 
-
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 
 
