--- a/jack.html
+++ b/jack.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">A really cool website</a>
+        <a class="navbar-brand" href="index.html">A really cool website</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="jack.html">Jack</a>
-                <a class="nav-item nav-link" href="#">Tom</a>
+                <a class="nav-item nav-link" href="myweb.html">Tom</a>
                 <a class="nav-item nav-link" href="#">Sunny</a>
                 <a class="nav-item nav-link" href="kelly.html">Kelly</a>
             </div>
