--- a/jack.html
+++ b/jack.html
@@ -2,37 +2,35 @@
 <html>
 
 <head>
-  <title>Jack's page</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css">
+    <title>Jack's page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.html">A really cool website</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="jack.html">Jack</a>
-                <a class="nav-item nav-link" href="myweb.html">Tom</a>
-                <a class="nav-item nav-link" href="#">Sunny</a>
-                <a class="nav-item nav-link" href="kelly.html">Kelly</a>
-            </div>
-        </div>
-    </nav>
-  <div>
-    <h1>Quantum computers</h1>
-    <img src="images/quantum computer.jpg" width=30%>
-    <p>Quantum computers could be used to solve many of today's pressing problems. They have the unique ability to store data as a probability function rather than as simple 1s or 0s. These data are known as "qubits", which is short for "quantum bits".</p>
-    <p>Today, the very best quantum computers are far from outcompeting simulations on traditional machines. But the power of a quantum computer is exponentially dependent on the number of qubits it uses, and therefore they are always getting more and more powerful. Soon there will be a point where the power of quantum computers surpasses that of traditional machines.</p>
-    <p>There are also some dangers involved with quantum computers. Most of today's encryption relies on methods which could be easily broken by such a machine without specially developed quantum encryption.</p>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <div id="nav"></div>
+    <div>
+        <h1>Quantum computers</h1>
+        <img src="images/quantum computer.jpg" width=30%>
+        <p>Quantum computers could be used to solve many of today's pressing problems. They have the unique ability to store
+            data as a probability function rather than as simple 1s or 0s. These data are known as "qubits", which is short
+            for "quantum bits".</p>
+        <p>Today, the very best quantum computers are far from outcompeting simulations on traditional machines. But the power
+            of a quantum computer is exponentially dependent on the number of qubits it uses, and therefore they are always
+            getting more and more powerful. Soon there will be a point where the power of quantum computers surpasses that
+            of traditional machines.</p>
+        <p>There are also some dangers involved with quantum computers. Most of today's encryption relies on methods which could
+            be easily broken by such a machine without specially developed quantum encryption.</p>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script>
+        $("#nav").load("nav.html");
+    </script>
 </body>
 
 </html>
