--- a/index.html
+++ b/index.html
@@ -9,21 +9,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="index.html">A really cool website</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="jack.html">Jack</a>
-        <a class="nav-item nav-link" href="myweb.html">Tom</a>
-        <a class="nav-item nav-link" href="#">Sunny</a>
-        <a class="nav-item nav-link" href="kelly.html">Kelly</a>
-      </div>
-    </div>
-  </nav>
+  <div id="nav"></div>
   <div>
     <p>This is the homepage of a website by Jack, Tom, Kelly, and Sunny.</p>
   </div>
@@ -33,6 +19,9 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+  <script>
+    $("#nav").load("nav.html");
+  </script>
 </body>
 
 </html>
