--- a/kelly.html
+++ b/kelly.html
@@ -17,21 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.html">A really cool website</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="jack.html">Jack</a>
-                <a class="nav-item nav-link" href="myweb.html">Tom</a>
-                <a class="nav-item nav-link" href="#">Sunny</a>
-                <a class="nav-item nav-link" href="kelly.html">Kelly</a>
-            </div>
-        </div>
-    </nav>
+    <div id="nav"></div>
     <div id="header" class="ui main text container">
         <div class="font-effect-anaglyph ui huge header">applications of computing</div>
         <p class="desc ui medium header">and how it has contributed to society</p>
@@ -127,9 +113,8 @@
             initialRating: 2,
             maxRating: 3
         });
+      $("#nav").load("nav.html");
     </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
