--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 
 <body>
   <div id="nav"></div>
-  <div>
-    <p>This is the homepage of a website by Jack, Tom, Kelly, and Sunny.</p>
+  <div class="jumbotron">
+    <div class="container">
+      <img class="img-fluid" src="https://i.ytimg.com/vi/Daar5xtUtd8/maxresdefault.jpg">
+      <p class="lead">This is the homepage of a website by Jack, Tom, Kelly, and Sunny.</p>
+
+    </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  <div>
+    <p>COMP1101/PRAC/004 Programming D/E216A Thursday 11:00 </p>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
