Change Sunny's page to sunnyp.html, modify nav link

--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="/Computing/jack.html">Jack</a>
             <a class="nav-item nav-link" href="/Computing/myweb.html">Tom</a>
-            <a class="nav-item nav-link" href="/Computing/baekseoyoung/molla.html">Sunny</a>
+            <a class="nav-item nav-link" href="/Computing/sunnyp.html">Sunny</a>
             <a class="nav-item nav-link" href="/Computing/kelly.html">Kelly</a>
         </div>
     </div>
