--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="nav"></div>
   <div class="jumbotron">
     <div class="container">
-      <img class="img-fluid" src="https://i.ytimg.com/vi/Daar5xtUtd8/maxresdefault.jpg">
+      <iframe width="100%" height="500px" src="https://www.youtube.com/embed/Daar5xtUtd8?controls=0&autoplay=1&loop=1&playlist=Daar5xtUtd8&disablekb=1&rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p class="lead">This is the homepage of a website by Jack, Tom, Kelly, and Sunny.</p>
 
     </div>
