--- a/jack.html
+++ b/jack.html
@@ -28,9 +28,13 @@
             <div class="p-3 mb-3 bg-light rounded">
                 <h4>About the Author</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Jack Mullin, confident and precise with managing work. Tends to be calm in general, but becomes enthusiastic with his interests.
+                </p>
+                <p>
+                    His major interests are artificial intelegence and space travel, and likes to research about development of future technologies.
+                </p>
+                <p>
+                    visit Jacks' <a href="https://github.com/JackMullin">github</a> for his recent works.
                 </p>
             </div>
         </div>
