--- a/myweb.html
+++ b/myweb.html
@@ -42,10 +42,11 @@
             <div class="p-3 mb-3 bg-light rounded">
                 <h4>About the Author</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Tom Ou is a first year computer scientist at Durham University. His intuition and enthusiasm for the subject are paralleled only by his love for rabbits.
                 </p>
+				<p>
+					More of Tom's work can be found on his <a href="https://github.com/o150654">Github</a>.
+				</p>
             </div>
         </div>
     </div>
