--- a/nav.html
+++ b/nav.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="/index.html">A really cool website</a>
+    <a class="navbar-brand" href="index.html">A really cool website</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/jack.html">Jack</a>
-            <a class="nav-item nav-link" href="/myweb.html">Tom</a>
-            <a class="nav-item nav-link" href="/sunnyp.html">Sunny</a>
-            <a class="nav-item nav-link" href="/kelly.html">Kelly</a>
+            <a class="nav-item nav-link" href="jack.html">Jack</a>
+            <a class="nav-item nav-link" href="myweb.html">Tom</a>
+            <a class="nav-item nav-link" href="sunnyp.html">Sunny</a>
+            <a class="nav-item nav-link" href="kelly.html">Kelly</a>
         </div>
     </div>
 </nav>
