Add author information of Kelly's Website

--- a/kelly.html
+++ b/kelly.html
@@ -66,9 +66,7 @@
             <div class="p-3 mb-3 bg-light rounded">
                 <h4>About the Author</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                   Kelly is a first year computer science student who has interests in artifical intelligence and big data analytics. To find more work made by Kelly, please visit <a href="https://github.com/yuenhy">Kelly Github Website</a></p>
                 </p>
             </div>
         </div>
