Add some comments on each websites

--- a/jack.html
+++ b/jack.html
@@ -1,3 +1,10 @@
+<!--
+General information is relevant to the topic, although, it could have been better if it has been supported with a few hyperlinks such as a link to youtube or a link to wikipedia for further research. -Yanki
+Interest of comment : good
+Consistency and quality of presentation : very good
+Quality of written presentation : excellent
+Evidence of collaboration : excellent
+-->
 <!DOCTYPE html>
 <html>
 
